[project]
name = "swin-ir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "requests>=2.32.5",
    "timm>=1.0.25",
    "torch>=2.10.0",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"